<resources>
    <string name="submit">Submit</string>
    <string name="enter_your_confirm_password_here">Enter Your Confirm Password Here</string>
    <string name="create_account">Create Account</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_name_here">Enter Your Name Here</string>
    <string name="enter_your_mobile_number_here">Enter Your Mobile Number Here</string>
    <string name="password">Password</string>
    <string name="enter_your_password_here">Enter Your Password Here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_id">Email Id</string>
    <string name="enter_your_email_address_here">Enter Your Email Address Here</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="enter_your_age_here">Enter Your Age Here</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_your_first_name_here">Enter Your First Name Here</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_last_name_here">Enter Your Last Name Here</string>
    <string name="gender">Gender</string>
    <string name="enter_username_here">Enter Username Here</string>
    <string name="app_name">LACK OF VISION</string>
    <string name="button1">Button1</string>
    <string name="button">Button</string>
    <string name="general_page">General page</string>
    <string name="company_login">Company Login</string>
    <string name="user_login">User Login</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="username">Username</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">We will send you an One time Password on this mobile number</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_user_menu">User_Menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="companies">Companies</string>
    <string name="application_issues">Application Issues</string>
    <string name="report_fraud">Report Fraud</string>
    <string name="earnings">Earnings</string>
    <string name="problems">Problems</string>
    <string name="selected_ideas">Selected Ideas</string>
    <string name="top_users">Top Users</string>
    <string name="title_activity_admin_menu">admin_menu</string>
    <string name="title_activity_company_menu">Company_Menu</string>
    <string name="current_status">Current Status</string>
    <string name="company_name">Company Name</string>
    <string name="this_is_the_description_text">This is the Description Text</string>
    <string name="this_is_the_subject_text">This is the Subject Text</string>
    <string name="enter_your_solution_here">Enter Your Solution Here</string>
    <string name="subject">Subject:</string>
    <string name="description">Description:</string>
    <string name="date_of_problem">Date Of Problem:</string>
    <string name="problem_subject">Problem Subject:</string>
    <string name="date_of_solution">Date Of Solution:</string>
    <string name="your_solution">Your Solution:</string>
    <string name="this_is_your_solution_text">This is your Solution Text</string>
</resources>